--- a/Services/src/main/resources/webutils/css/webutils.css
+++ b/Services/src/main/resources/webutils/css/webutils.css
@@ -4,3 +4,61 @@
 	width: 100%;
 	margin: auto;
 }
+
+.inline-list
+{
+	display: inline;
+	padding: 0px;
+}
+
+.inline-list > li
+{
+	display: inline;
+}
+
+.yk-dropdown-header
+{
+	border-bottom: 2px solid #f0f0f0;
+	color: rgb(160, 160, 160);
+	font-weight: bold;
+	font-size: 0.8em;
+	margin-bottom: 0.5em;
+	padding: 0em 0.5em;
+	text-align: center;
+}
+
+.yk-dropdown-footer
+{
+	border-top: 2px solid #f0f0f0;
+	color: rgb(160, 160, 160);
+	font-weight: bold;
+	font-size: 0.8em;
+	margin-top: 0.5em;
+	padding: 0em 0.5em;
+	text-align: center;
+}
+
+.yk-nav-list
+{
+	list-style: none;
+	padding-left: 1em;
+}
+
+.yk-nav-list > li > a
+{
+	padding: 0.6em 0.6em;
+	text-decoration: none;
+	display: block;
+}
+
+.yk-nav-list > li > a:hover, a:focus
+{
+	background-color: #eee;
+	border-radius: 0.4em;
+}
+
+.stateHighlight
+{
+	background-color: #eee;
+	border-radius: 0.4em;
+}
