--- a/Services/src/main/resources/webutils/templates/webutils-templates.html
+++ b/Services/src/main/resources/webutils/templates/webutils-templates.html
@@ -203,41 +203,45 @@
 				}
 			</exe-script>
 			
+			<set-var name="_showQuery" expr=" (context.attr('hide-query') == 'true') ? false : true"/>
+			
 			<div id="${attr('id')}" class="container-fluid" style="padding: 0px; margin: 0px" ng-controller="searchQueryController">
-				<div class="panel panel-default" style="margin-bottom: 0.4em;" ng-init="searchQueryId = '${attr('id')}'">
-					<div class="panel-heading" style="padding: 0.3em 1em; font-weight: bold;">
-						${attr('title')}
-					</div>
-	
-					<div class="panel-body"  yk-model="${searchModel.name}" ng-init="searchQueryName = '${attr('name')}'">
-						<form>
-							<div class="row">
-								<for-each data="${searchModel.fields}" loop-var="field" index-var="idx">
-									<if test="context.idx != 0 &amp;&amp; (context.idx % 3) == 0"><![CDATA[
+				<if test="context._showQuery">
+					<div class="panel panel-default" style="margin-bottom: 0.4em;" ng-init="searchQueryId = '${attr('id')}'">
+						<div class="panel-heading" style="padding: 0.3em 1em; font-weight: bold;">
+							${attr('title')}
+						</div>
+		
+						<div class="panel-body"  yk-model="${searchModel.name}" ng-init="searchQueryName = '${attr('name')}'">
+							<form>
+								<div class="row">
+									<for-each data="${searchModel.fields}" loop-var="field" index-var="idx">
+										<if test="context.idx != 0 &amp;&amp; (context.idx % 3) == 0"><![CDATA[
+											</div>
+											<div class="row" style="padding-bottom: 0.5em">
+										]]></if>
+										
+										<div class="col-md-4 col-xs-12" style="padding-bottom: 0.2em;">
+											<model-field name="${field.name}" modelobj="searchQuery"></model-field>
 										</div>
-										<div class="row" style="padding-bottom: 0.5em">
-									]]></if>
-									
-									<div class="col-md-4 col-xs-12" style="padding-bottom: 0.2em;">
-										<model-field name="${field.name}" modelobj="searchQuery"></model-field>
-									</div>
-								</for-each>
-							</div>
-							
-							<div class="row" style="text-align: right; padding-right: 2em;">
-								<!-- Submit button is added to support enter key in search form. This will be hidden.
-									Instead iconic link button will be used for click 
-								 -->
-								<input type="submit" value="Search" style="display: none;" yk-click="performSearch($event)"/>
+									</for-each>
+								</div>
 								
-								<a class="btn btn-primary" role="button" yk-click="performSearch($event)">
-									<i class="glyphicon glyphicon-search"></i>
-									Search
-								</a>
-							</div>
-						</form>
+								<div class="row" style="text-align: right; padding-right: 2em;">
+									<!-- Submit button is added to support enter key in search form. This will be hidden.
+										Instead iconic link button will be used for click 
+									 -->
+									<input type="submit" value="Search" style="display: none;" yk-click="performSearch($event)"/>
+									
+									<a class="btn btn-primary" role="button" yk-click="performSearch($event)">
+										<i class="glyphicon glyphicon-search"></i>
+										Search
+									</a>
+								</div>
+							</form>
+						</div>
 					</div>
-				</div>
+				</if>
 				
 				<div class="row">
 					<if test="context.actions">
